completed most of the working stuff, one button does it all

--- a/index.html
+++ b/index.html
@@ -8,10 +8,7 @@
     <script src="src/script.js" type="module"></script>
   </head>
   <body>
-    <h1>Sporkify</h1>
-    <button id="populate-btn">Populate list</button><br />
-    <button id="delete-btn">Delete songs</button>
-    <button id="add-btn">Add song</button>
+    <button id="almagify-btn">LET'S DO IT</button><br />
     <section id="songs">
       <ol id="list"></ol>
     </section>
