--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My Spotify Profile</title>
+    <link rel="shortcut icon" href="src/favicon.ico" type="image/x-icon" />
     <script src="src/script.js" type="module"></script>
   </head>
   <body>
