added styling to btn to make it EZ to touch

--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My Spotify Profile</title>
     <link rel="shortcut icon" href="src/favicon.ico" type="image/x-icon" />
+    <link rel="stylesheet" href="src/styles.css" />
     <script src="src/script.js" type="module"></script>
   </head>
   <body>
-    <button id="almagify-btn">LET'S DO IT</button><br />
+    <button id="amalgify-btn">LET'S DO IT</button><br />
     <section id="songs">
       <ol id="list"></ol>
     </section>
